# spotiver

./: .env.example  .gitignore  Cargo.toml  README.html  README.md  playlists.sample
src/: auth_code.py  authenticate.rs  authorize.py  lib.rs  main.rs  objects.rs  side.rs  test.sh
src/db/: mod.rs  notes.txt
src/objects/: album.rs  artist.rs  external.rs  image.rs  owner.rs  playlist.rs  response.rs  restriction.rs  sj_number.rs  test.rs  track.rs
