[package]
name = "sp-struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # parse json
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"] }
base64 = "0.13"
dotenv = "0.15"
chrono = "0.4"
csv = "1.1.0"
