[package]
name = "spotiver"
version = "0.1.0"
edition = "2021"

[lib]
name = "spotiver"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # parse json
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"] }
base64 = "0.13"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.0"
sqlite = "0.37.0"
sqlite3-sys = "0.18.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "side"
path = "src/side.rs"
